# oxapi

./: .gitignore  Cargo.toml  README.md  common.nix  flake.nix  llms.txt  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
.memories/: oxapi-custom-extractors.md  oxapi-entropy-reduction-refactoring.md  oxapi-path-struct-query-unknown-field.md  oxapi-response-headers.md
crates/oxapi/: Cargo.toml
crates/oxapi-impl/: Cargo.toml
crates/oxapi-impl/src/: lib.rs  method.rs  openapi.rs  responses.rs  router.rs  types.rs
crates/oxapi-macro/: Cargo.toml
crates/oxapi-macro/src/: lib.rs
crates/oxapi/src/: flag.rs  lib.rs
crates/oxapi/tests/: additional_extractors.rs  additional_extractors.yaml  module_mode_request_body.rs  module_mode_request_body.yaml  response_headers.rs  response_headers.yaml
crates/oxapi/tests/common/: mod.rs
examples/petstore/: Cargo.toml  LICENSE  petstore.json
examples/petstore/src/: main.rs
