[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.1.1" # Set by release workflow
edition = "2024"
license = "LGPL-3.0"
repository = "https://github.com/jcdickinson/oxapi"
authors = ["Jonathan Dickinson"]
description = "Generate type-safe Rust server stubs from OpenAPI specs"
keywords = ["openapi", "codegen", "axum", "api", "server"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]
rust-version = "1.82.0"

[workspace.dependencies]
heck = "0.5" #unified
quote = "1.0" #unified
serde = { version = "1.0", features = ["derive"] } #unified
serde_json = "1.0" #unified
syn = { version = "2.0", features = ["full", "parsing", "printing"] } #unified
proc-macro2 = "1.0"
oxapi-impl = { path = "crates/oxapi-impl", version = "0.1.1" }
oxapi-macro = { path = "crates/oxapi-macro", version = "0.1.1" }
