[package]
name = "oxapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generate type-safe Rust server stubs from OpenAPI specs"
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
oxapi-macro = { path = "../oxapi-macro" }
