[package]
name = "oxapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generate type-safe Rust server stubs from OpenAPI specs"
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
oxapi-macro = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
uuid = { version = "1.0", features = ["serde"] }
