[package]
name = "petstore-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
oxapi = { path = "../../crates/oxapi" }
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
tokio = { version = "1", features = ["full"] }
